# decursion

./: .gitignore  .justfile  Cargo.toml  flake.nix  test.cpp
src/: lib.rs
tests/: count-tree-nodes.rs  dfs.rs
