[package]
name = "decursion"
version = "0.1.0"
edition = "2021"
description = "Write recursive algorithms without worrying about stack overflows"
license = "MIT"
repository = "https://github.com/kuviman/decursion"

[dependencies]
async-oneshot = "0.5.9"
futures = "0.3.30"
futures-lite = "2.3.0"
scoped-tls-hkt = "0.1.5"
